# neewer-usb-control

./: README.md
app/: package.json
app/src/: App.svelte
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  lib.rs  serial.rs  tray_icon.rs
scripts/: export-icons-from-design.mjs
