[package]
name = "neewer-usb-control"
version = "1.0.0"
edition = "2021"

[lib]
name = "neewer_usb_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "neewer-usb-control"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serialport = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
